Bug 14974 - Solaris and AIX acl modules: wrong function arguments
Summary: Solaris and AIX acl modules: wrong function arguments
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: VFS Modules (show other bugs)
Version: 4.15.5
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-02-11 02:49 UTC by Björn Jacke
Modified: 2022-03-15 13:26 UTC (History)
1 user (show)

See Also:


Attachments
backported patch for 4.15 and 4.16 (3.42 KB, patch)
2022-02-19 22:33 UTC, Björn Jacke
metze: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Björn Jacke 2022-02-11 02:49:02 UTC
Solaris and AIX acl modules: wrong function arguments for *_sys_acl_set_fd
have patch, need bug number ...
Comment 1 Jeremy Allison 2022-02-11 03:10:07 UTC
Someone sent in a fix for this a while ago, but I forgot :-(. I'm happy to review + push once you post the fix to ci.
Comment 2 Samba QA Contact 2022-02-18 23:25:13 UTC
This bug was referenced in samba master:

183ab5ced8377b63ad07d2e810396d3b414f4a7d
89e903985b6968c5becc69b757b23144b1aba66e
Comment 3 Björn Jacke 2022-02-19 22:33:42 UTC
Created attachment 17171 [details]
backported patch for 4.15 and 4.16
Comment 4 Jule Anger 2022-02-27 16:23:43 UTC
Pushed to autobuild-v4-{16,15}-test.
Comment 5 Samba QA Contact 2022-02-27 17:55:14 UTC
This bug was referenced in samba v4-15-test:

ea5edbbe83f09e8282ee0efcc45f4fb92394b37f
1507981e02791f5ded15321bb04d8c2f0aa00109
Comment 6 Samba QA Contact 2022-02-27 20:25:23 UTC
This bug was referenced in samba v4-16-test:

9016cb5c64351ff267d8deb43451370d6dcbba64
821e16c077c98ea4d792a4a788be68c2fbb21264
Comment 7 Jule Anger 2022-02-28 09:22:23 UTC
Closing out bug report.

Thanks!
Comment 8 Samba QA Contact 2022-03-01 08:55:45 UTC
This bug was referenced in samba v4-16-stable (Release samba-4.16.0rc4):

9016cb5c64351ff267d8deb43451370d6dcbba64
821e16c077c98ea4d792a4a788be68c2fbb21264
Comment 9 Samba QA Contact 2022-03-15 13:26:48 UTC
This bug was referenced in samba v4-15-stable (Release samba-4.15.6):

ea5edbbe83f09e8282ee0efcc45f4fb92394b37f
1507981e02791f5ded15321bb04d8c2f0aa00109