source3/lib/sysacls.c
@@ -410,7 +410,7 @@ SMB_ACL_T sys_acl_get_fd(vfs_handle_struct *handle,
 			 SMB_ACL_TYPE_T type,
 			 TALLOC_CTX *mem_ctx)
 {
-	return solarisacl_sys_acl_get_fd(handle, fsp,
+	return solarisacl_sys_acl_get_fd(handle, fsp, type,
 					 mem_ctx);
 }
 
