source3/modules/vfs_solarisacl.h
@@ -27,6 +27,7 @@ SMB_ACL_T solarisacl_sys_acl_get_file(vfs_handle_struct *handle,
 
 SMB_ACL_T solarisacl_sys_acl_get_fd(vfs_handle_struct *handle,
 				    files_struct *fsp, 
+				    SMB_ACL_TYPE_T type,
 				    TALLOC_CTX *mem_ctx);
 
 int solarisacl_sys_acl_set_fd(vfs_handle_struct *handle,
